--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.4"
   },
@@ -10,7 +13,6 @@
   "name": "server",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC",
   "description": ""
