--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,20 @@
 {
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "mongoose": "^8.2.1",
-    "nodemon": "^3.1.0",
-    "socket.io": "^4.7.4"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "name": "server",
-  "version": "1.0.0",
-  "main": "server.js",
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "dependencies": {
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.18.3",
+        "mongoose": "^8.2.1",
+        "nodemon": "^3.1.0",
+        "socket.io": "^4.7.4"
+    },
+    "scripts": {
+        "start": "nodemon server.js"
+    },
+    "name": "server",
+    "version": "1.0.0",
+    "main": "server.js",
+    "author": "",
+    "license": "ISC",
+    "description": ""
 }
